# validat

./: .gitignore  README.md  pyproject.toml  requirements.txt  t.py  tox.ini
.github/workflows/: docs.yml  publish.yml  test.yml
docs/source/: api_reference.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
src/validat/: __init__.py
src/validat/exceptions/: base.py
src/validat/validators/: email.py  phone.py  url.py
tests/: test_validate_email.py  test_validate_email_with_exceptions.py  test_validate_phone.py  test_validate_phone_with_exceptions.py  test_validate_url.py  test_validate_url_with_exceptions.py
validat/: __init__.py  validators.py
validat/exceptions/: base.py  email.py
validat/validators/: email.py  phone.py  url.py
