[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "validat"
version = "0.0.5"
authors = [
    { name = "Aliaksei Yafremau", email = "447654972g@gmail.com"}
]
description = "Library for data validation"
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff.lint]
ignore = ["E712"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
    "tox>=4.25.0",
]
